--- a/CC-Electron/src/renderer/styles/theme-variables.css
+++ b/CC-Electron/src/renderer/styles/theme-variables.css
@@ -3,19 +3,9 @@
     src: url("../../assets/font/Lexend/Lexend-VariableFont_wght.ttf");
 }
 
-/* @font-face {
-    font-family: "Azaret Mono";
-    src: url("../../assets/font/Azeret_Mono/AzeretMono-VariableFont_wght.ttf");
-}
-
-@font-face {
-    font-family: "Azaret Mono Italic";
-    src: url("../../assets/font/Azeret_Mono/AzeretMono-Italic-VariableFont_wght.ttf");
-} */
-
 * {
     font-family: "Lexend", sans-serif;
-    /* font-optical-sizing: auto; */
+    font-optical-sizing: auto;
 }
 
 /* Color Variables */
@@ -163,6 +153,7 @@ html[data-theme="dark"] {
 
     /* ==== cfbtn -> Confirmation Button ==== */
     --cfbtn-color: #dddddd;
+    --cfbtn-alt-color: #ffffff;
 
     /* ==== cfcancelbtn -> Confirmation Cancel Button ==== */
     --cfcancelbtn-bgcolor: #5a5d5f;
@@ -530,7 +521,8 @@ html[data-theme="light"] {
 
     /* ==== cfbtn -> Confirmation Button ==== */
     --cfbtn-color: #dddddd;
-
+    --cfbtn-alt-color: #ffffff;
+    
     /* ==== cfcancelbtn -> Confirmation Cancel Button ==== */
     --cfcancelbtn-bgcolor: #5a5d5f;
     --cfcancelbtn-alt-bgcolor: #808080;
